remove useless python file

--- a/assignment/hw1/hw1_3160104367.md
+++ b/assignment/hw1/hw1_3160104367.md
@@ -34,7 +34,7 @@ That's to say, the probability of $B_1$ or $B_3$ that contains the bonus is just
 
 - (ii) The distribution of $P(\omega_i \mid x)$ is shown below:
 
-![](../answer_images/hw1_2_b_ii.png)
+![](https://github.com/MySuperSoul/DM/blob/master/assignment/answer_images/hw1_2_b_ii.png?raw=true)
 
         Using optimal bayes decision rule, the test error is 47.
 
@@ -68,8 +68,8 @@ So far, we continue to go on to get the **decision boundary:** using the same wa
 - **(b):** See the codes in folder.
 <br>
 - **(c):** The result plots shown below:
-![First 4 plots](../answer_images/hw1_3_c_1.png)
-![Last 4 plots](../answer_images/hw1_3_c_2.png)
+![First 4 plots](https://github.com/MySuperSoul/DM/blob/master/assignment/answer_images/hw1_3_c_1.png?raw=true)
+![Last 4 plots](https://github.com/MySuperSoul/DM/blob/master/assignment/answer_images/hw1_3_c_2.png?raw=true)
 <br>
 - **(d):**
 &nbsp;&nbsp;&nbsp;&nbsp;Here I start from K-class gaussian model to calculate the MLE of all parameters. The procedure is below:
