final modify version for hw1

--- a/assignment/hw1/hw1_3160104367.md
+++ b/assignment/hw1/hw1_3160104367.md
@@ -1,4 +1,4 @@
-## Assignment#1
+## Assignment1
 
 ### 1. Machine learning problem
 **(a)**
@@ -22,6 +22,7 @@ Answer: **This is definite False.** If you just choose parameters which performs
 - (i) Since we just have 3 boxes, so: $$P(B_1 = 1) = \frac{1}{3}$$
 - (ii) Since we just have 1 box containes the bonus, so: $$P(B_2 = 0 \mid B_1 = 1) = 1$$
 - (iii) From Bayes formula, we can get that: $$P(B_1 = 1 \mid B_2 = 0) = \frac{P(B_2 = 0 \mid B_1 = 1) \cdot P(B_1 = 1)}{P(B_2 = 0)} = \frac{1\ast(\frac{1}{3})}{(\frac{2}{3})} = \frac{1}{2}$$
+<br>
 - (iv) Since the $B_1$ and $B_3$ has no direct association, so that can get:$$P(B_1 = 1 \mid B_2 = 0) = P(B_3 = 1 \mid B_2 = 0) = \frac{1}{2}$$
 That's to say, the probability of $B_1$ or $B_3$ that contains the bonus is just the same! So you can either choose stick to $B_1$ or choose the left box $B_3$, both are optimal choice.
 
@@ -30,18 +31,29 @@ That's to say, the probability of $B_1$ or $B_3$ that contains the bonus is just
 
 ![](https://github.com/MySuperSoul/DM/blob/master/assignment/answer_images/hw1_2_b_i.png?raw=true)
 
-        Using the maximum likelihood decision rule,the test error is 64.
+        Using the maximum likelihood decision rule,the number of 
+        misclassfied x also test error is 64.
 
 - (ii) The distribution of $P(\omega_i \mid x)$ is shown below:
 
 ![](https://github.com/MySuperSoul/DM/blob/master/assignment/answer_images/hw1_2_b_ii.png?raw=true)
 
-        Using optimal bayes decision rule, the test error is 47.
+        Using optimal bayes decision rule, the number of 
+        misclassfied x also the test error is 47.
 
-- (iii) The minimum total risk $(R = \sum_xmin_iR(\alpha_i \mid x))$ we calculate the result is **2.444354**
+- (iii) The minimum total risk $(R = \sum_xmin_iR(\alpha_i \mid x) = \sum_xmin_i \lambda(\alpha_i \mid \omega_j) \cdot p(\omega_j \mid x))$, here we know the loss matrix $\lambda(\alpha_i \mid \omega_j)$, and I take the training set posterior into the formula, I calculate the result is **2.444354**, the codes shown below, also can see in the code folder:
+```matlab
+% p is the posterior
+risk = [0, 1; 2, 0];
+matrix_omega_1 = sum(p .* risk(1, :)');
+matrix_omega_2 = sum(p .* risk(2, :)');
+matrix_min = min(matrix_omega_1, matrix_omega_2);
+risk_min = sum(matrix_min);
+fprintf("The minimum risk is %f\n", risk_min);
+```
 
 ---
-
+<br><br><br><br><br>
 ### 3. Gaussian Discriminant Analysis and MLE
 - **(a)**
 
@@ -64,9 +76,34 @@ Take $(4)(5)$ back to $(2)$, we can get final result:
 $$p(y=1\mid \mathtt{x};\phi,\mu_0,\mu_1,\Sigma_0,\Sigma_1)=\frac{1}{1+\frac{p(\mathtt{x}\mid y=0)}{p(\mathtt{x}\mid y=1)}}=\frac{1}{1+e^{1-x_1-x_2}} \tag{6}$$
 
 So far, we continue to go on to get the **decision boundary:** using the same way calculate that $P(y=0\mid \mathtt{x})=\frac{1}{1+e^{x_1+x_2-1}}$, we let $p(y=0\mid \mathtt{x})=p(y=1\mid \mathtt{x})$, then we get the **decision boundary also discrimant plane**: **$x_1+x_2=1$**. When $x_1+x_2<1\implies p(y=0\mid \mathtt{x})>p(y=1\mid \mathtt{x}).$ When $x_1+x_2>1\implies p(y=1\mid \mathtt{x})>p(y=0\mid \mathtt{x}).$
-
-- **(b):** See the codes in folder.
 <br>
+- **(b):** $Posterior = p(y_i\mid \mathtt{x}) = \frac{p(\mathtt{x} \mid y_i)p(y_i)}{p(\mathtt{x})}$, in this task already know the likelihood formula form and $prior = p(y_i) = \phi_i, p(\mathtt{x}) = \sum_{i=1}^mp(\mathtt{x}\mid y_i)p(y_i)$, so according to the information we know above, the implementation below, you can also find these in code folder and some parameter description:
+```matlab
+%   Inputs:
+%       'X'     - M-by-N matrix, N data points of dimension M.
+%       'Mu'    - M-by-K matrix, mean of K Gaussian distributions.
+%       'Sigma' - M-by-M-by-K matrix (yes, a 3D matrix), variance matrix of
+%                   K Gaussian distributions.
+%       'Phi'   - 1-by-K matrix, prior of K Gaussian distributions.
+%
+%   Outputs:
+%       'p'     - N-by-K matrix, posterior probability of N data points
+%                   with in K Gaussian distributions.
+
+for i=1:K
+    phi_i = Phi(i);
+    Sigma_i = Sigma(:, :, i);
+    mu_i = Mu(:, i);
+    deteminant = det(Sigma_i);
+    Sigma_i_inv = pinv(Sigma_i);
+    post_i = phi_i / (2 * pi * sqrt(deteminant)) * ...
+      exp(-0.5 * sum((X - mu_i)' * Sigma_i .* (X - mu_i)', 2));
+    P(:, i) = post_i;
+end
+evidence_matrix = sum(P, 2);
+P = P ./ evidence_matrix;
+```
+
 - **(c):** The result plots shown below:
 ![First 4 plots](https://github.com/MySuperSoul/DM/blob/master/assignment/answer_images/hw1_3_c_1.png?raw=true)
 ![Last 4 plots](https://github.com/MySuperSoul/DM/blob/master/assignment/answer_images/hw1_3_c_2.png?raw=true)
@@ -90,7 +127,7 @@ $$
 &=-\frac{1}{2}[0-(x_i^T\Sigma^{-1})^T-\Sigma^{-1}x_i+(\Sigma^{-1}+(\Sigma^{-1})^T)\mu] \\
 &=-\frac{1}{2}(\Sigma^{-1} + (\Sigma^{-1})^T)(\mu-x_i)
 \end{aligned}
-$$ 
+$$
 $$
 \begin{aligned}
 \nabla _\mu l(\theta) &= \nabla_\mu\sum_{i=1}^m\ln p(x_i\mid \theta) \\
@@ -145,7 +182,7 @@ $$
 <br>
 
 - **(b):**
-The accuracy rate of my classifier on test set is **98.573156%.**
+The accuracy rate of my classifier on test set is **98.573156%.**, you can check this simply by running the `run.m` in the `text_classification` code folder.
 <br>
 
 - **(c):**
@@ -153,8 +190,8 @@ That is **not correct**. A model with 99% accuracy is not always a perfect model
 <br>
 
 - **(d):**
-According to my learnt model, I get this result: $f_p:28,$&nbsp;$f_n: 31,$&nbsp; $t_p: 1093,$&nbsp;$t_n: 2983,$ and together get the $precision = \frac{t_p}{t_p+f_p} = 0.975022$, and the $recall = \frac{t_p}{t_p+f_n} = 0.972420$.
+According to my learnt model, I get this result: $f_p:28,$&nbsp;$f_n: 31,$&nbsp; $t_p: 1093,$&nbsp;$t_n: 2983,$ and from these data get the $precision = \frac{t_p}{t_p+f_p} = 0.975022$, and the $recall = \frac{t_p}{t_p+f_n} = 0.972420$.
 <br>
 
 - **(e):**
-In my opinion, in **spam filter** the **recall is more important than the precision**, because we just focus on filter the spam emails, small number of ham emails classify to spam does not so large effect on this. But a classifier to **identify drugs and bombs at airport we should more focus on precision**, because in this situation we must be sure that the classify precision is high, we can't let one bomb or drugs to go through the airport right. So for this classifier, **precision is more inportant than recall.**
+In my opinion, in **spam filter** the **recall is more important than the precision**, because we just focus on filter the spam emails, small number of ham emails classify to spam does not so large effect on this, we only need it can filter the spam emails out. But a classifier to **identify drugs and bombs at airport we should more focus on precision**, because in this situation we must be sure that the classify precision is high, we can't let one bomb or drugs to go through the airport right, and save things we just them go. So for this classifier, **precision is more inportant than recall.**
