change little descriptions

--- a/assignment/hw1/hw1_3160104367.md
+++ b/assignment/hw1/hw1_3160104367.md
@@ -13,7 +13,7 @@
 9) BF
 
 **(b)**
-Answer: **This is definite False.** If you just choose parameters which performs best on whole dataset, it may cause the **overfitting problem or high variance**, that is to say your model's generalization ability is low. So it's better to split the dataset into **training set、cross-validation set and test set**, we train our model parameters from training set that performs best on cross-validation set, meanwhile use the test set to examine the generalization ability of your model.
+Answer: **This is definite False.** If you just choose parameters which performs best on whole dataset, it may cause the **overfitting problem or high variance**, that is to say your model's generalization ability is low. So it's better to split the dataset into **training set、cross-validation set and test set**, we train our model parameters from training set and choose the parameters which performs best on cross-validation set, meanwhile use the test set to examine the generalization ability of your model.
 
 ---
 
@@ -41,7 +41,7 @@ That's to say, the probability of $B_1$ or $B_3$ that contains the bonus is just
         Using optimal bayes decision rule, the number of 
         misclassfied x also the test error is 47.
 
-- (iii) The minimum total risk $(R = \sum_xmin_iR(\alpha_i \mid x) = \sum_xmin_i \lambda(\alpha_i \mid \omega_j) \cdot p(\omega_j \mid x))$, here we know the loss matrix $\lambda(\alpha_i \mid \omega_j)$, and I take the training set posterior into the formula, I calculate the result is **2.444354**, the codes shown below, also can see in the code folder:
+- (iii) The minimum total risk $(R = \sum_xmin_iR(\alpha_i \mid x) = \sum_xmin_i \lambda(\alpha_i \mid \omega_j) \cdot p(\omega_j \mid x))$, here we know the loss matrix $\lambda(\alpha_i \mid \omega_j)$, and I take the training set posterior $p_{train}(\omega_j \mid x)$ into the formula, I calculate the result is **2.444354**, the codes shown below, also can see in the code folder:
 ```matlab
 % p is the posterior
 risk = [0, 1; 2, 0];
@@ -169,20 +169,20 @@ $$
 ### 4. Text Classification with Naive Bayes
 
 - **(a):**
-        1. **nbsp**  &nbsp;index:30033
-        2. **viagra** &nbsp;index:75526
-        3. **pills** &nbsp;index:38176
-        4. **cialis** &nbsp;index:45153
-        5. **voip** &nbsp;index:9494
-        6. **php** &nbsp;index:65398
-        7. **meds** &nbsp;index:37568
-        8. **computron** &nbsp;index:13613
-        9. **sex** &nbsp;index:56930
-        10. **ooking** &nbsp;index:9453
+        1. **nbsp**  &nbsp;&nbsp;index:30033
+        2. **viagra** &nbsp;&nbsp;index:75526
+        3. **pills** &nbsp;&nbsp;index:38176
+        4. **cialis** &nbsp;&nbsp;index:45153
+        5. **voip** &nbsp;&nbsp;index:9494
+        6. **php** &nbsp;&nbsp;index:65398
+        7. **meds** &nbsp;&nbsp;index:37568
+        8. **computron** &nbsp;&nbsp;index:13613
+        9. **sex** &nbsp;&nbsp;index:56930
+        10. **ooking** &nbsp;&nbsp;index:9453
 <br>
 
 - **(b):**
-The accuracy rate of my classifier on test set is **98.573156%.**, you can check this simply by running the `run.m` in the `text_classification` code folder.
+The accuracy rate of my classifier on test set is **98.573156%**, The procedure of calculating is that find the misclassified number in spam test and ham test, then divide the total number of these two test set then get the error rate. So **accuracy = 1 - error rate.**  you can check this simply by running the `run.m` in the `text_classification` code folder.
 <br>
 
 - **(c):**
