--- a/assignment/hw1/hw1_3160104367.md
+++ b/assignment/hw1/hw1_3160104367.md
@@ -41,19 +41,29 @@ That's to say, the probability of $B_1$ or $B_3$ that contains the bonus is just
         Using optimal bayes decision rule, the number of 
         misclassfied x also the test error is 47.
 
-- (iii) The minimum total risk $(R = \sum_xmin_iR(\alpha_i \mid x) = \sum_xmin_i \lambda(\alpha_i \mid \omega_j) \cdot p(\omega_j \mid x))$, here we know the loss matrix $\lambda(\alpha_i \mid \omega_j)$, and I take the training set posterior $p_{train}(\omega_j \mid x)$ into the formula, I calculate the result is **2.444354**, the codes shown below, also can see in the code folder:
+- (iii) The minimum total risk $(R = \sum_xmin_iR(\alpha_i \mid x) = \sum_xmin_i \lambda(\alpha_i \mid \omega_j) \cdot p(\omega_j \mid x))$, here we know the loss matrix $\lambda(\alpha_i \mid \omega_j)$, and if take the training set posterior $p_{train}(\omega_j \mid x)$ into the formula, I calculate the result is **2.444354**, if take the test set $p_{test}(\omega_j \mid x)$ into formula, I first retrive the both 0 columns and get result is **2.178660**. The codes shown below, also can see in the code folder:
 ```matlab
-% p is the posterior
+% p is the posterior of training set
 risk = [0, 1; 2, 0];
 matrix_omega_1 = sum(p .* risk(1, :)');
 matrix_omega_2 = sum(p .* risk(2, :)');
 matrix_min = min(matrix_omega_1, matrix_omega_2);
 risk_min = sum(matrix_min);
-fprintf("The minimum risk is %f\n", risk_min);
+fprintf("The minimum risk for training set is %f\n", risk_min);
+
+% use test set to calculate risk
+% retrive both 0 columns
+p = posterior(test_x(:, 4:size(test_x, 2) - 1));
+matrix_omega_1 = sum(p .* risk(1, :)');
+matrix_omega_2 = sum(p .* risk(2, :)');
+matrix_min = min(matrix_omega_1, matrix_omega_2);
+risk_min = sum(matrix_min);
+fprintf("The minimum risk for test set is %f\n", risk_min);
 ```
 
 ---
-<br><br><br><br><br>
+
+<br><br>
 ### 3. Gaussian Discriminant Analysis and MLE
 - **(a)**
 
