fix gaussian bugs -> inv

--- a/assignment/hw1/hw1_3160104367.md
+++ b/assignment/hw1/hw1_3160104367.md
@@ -87,7 +87,7 @@ $$p(y=1\mid \mathtt{x};\phi,\mu_0,\mu_1,\Sigma_0,\Sigma_1)=\frac{1}{1+\frac{p(\m
 
 So far, we continue to go on to get the **decision boundary:** using the same way calculate that $P(y=0\mid \mathtt{x})=\frac{1}{1+e^{x_1+x_2-1}}$, we let $p(y=0\mid \mathtt{x})=p(y=1\mid \mathtt{x})$, then we get the **decision boundary also discrimant plane**: **$x_1+x_2=1$**. When $x_1+x_2<1\implies p(y=0\mid \mathtt{x})>p(y=1\mid \mathtt{x}).$ When $x_1+x_2>1\implies p(y=1\mid \mathtt{x})>p(y=0\mid \mathtt{x}).$
 <br>
-- **(b):** $Posterior = p(y_i\mid \mathtt{x}) = \frac{p(\mathtt{x} \mid y_i)p(y_i)}{p(\mathtt{x})}$, in this task already know the likelihood formula form and $prior = p(y_i) = \phi_i, p(\mathtt{x}) = \sum_{i=1}^mp(\mathtt{x}\mid y_i)p(y_i)$, so according to the information we know above, the implementation below, you can also find these in code folder and some parameter description:
+- **(b):** $Posterior = p(y_i\mid \mathtt{x}) = \frac{p(\mathtt{x} \mid y_i)p(y_i)}{p(\mathtt{x})}$, in this task already know the likelihood formula form is gaussian distribution, that is $p(\mathtt{x} \mid y_i) = \frac{1}{2\pi\sqrt{|\Sigma_k|}}e^{-\frac{1}{2}(\mathtt{x}-\mu_k)^T\Sigma_k^{-1}(\mathtt{x}-\mu_k)}$ and $prior = p(y_i) = \phi_i, evidence = p(\mathtt{x}) = \sum_{i=1}^mp(\mathtt{x}\mid y_i)p(y_i)$, so according to the information we know above, the implementation below, you can also find these in code folder and some parameter description:
 ```matlab
 %   Inputs:
 %       'X'     - M-by-N matrix, N data points of dimension M.
@@ -107,7 +107,7 @@ for i=1:K
     deteminant = det(Sigma_i);
     Sigma_i_inv = pinv(Sigma_i);
     post_i = phi_i / (2 * pi * sqrt(deteminant)) * ...
-      exp(-0.5 * sum((X - mu_i)' * Sigma_i .* (X - mu_i)', 2));
+      exp(-0.5 * sum((X - mu_i)' * Sigma_i_inv .* (X - mu_i)', 2));
     P(:, i) = post_i;
 end
 evidence_matrix = sum(P, 2);
@@ -115,8 +115,8 @@ P = P ./ evidence_matrix;
 ```
 
 - **(c):** The result plots shown below:
-![First 4 plots](https://github.com/MySuperSoul/DM/blob/master/assignment/answer_images/hw1_3_c_1.png?raw=true)
-![Last 4 plots](https://github.com/MySuperSoul/DM/blob/master/assignment/answer_images/hw1_3_c_2.png?raw=true)
+![First 4 plots](../answer_images/hw1_3_c_1.png)
+![Last 4 plots](../answer_images/hw1_3_c_2.png)
 <br>
 - **(d):**
 &nbsp;&nbsp;&nbsp;&nbsp;Here I start from K-class gaussian model to calculate the MLE of all parameters. The procedure is below:
