report finish, some style and dt remain to draw

--- a/assignment/hw3/3160104367_hw3.md
+++ b/assignment/hw3/3160104367_hw3.md
@@ -185,3 +185,111 @@ end
 
 - (5)
 ![](../answer_images/hw3_2_test_5.png)
+
+---
+
+#### 3. Decision Tree and ID3
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; In this section we gonna to implement the ID3 algorithm, and we know that $Entropy(S) = -\sum_{i=1}^cp_i\log p_i$, and $Gain(S) = Entropy(S) - \sum_{v\in values(a)}\frac{|S_v|}{|S|}Entropy(S_v)$, from this we know that:
+$$
+\begin{aligned}
+    Entropy(S) &= -(\frac{200}{450}\log \frac{200}{450} + \frac{250}{450}\log \frac{250}{450}) \\
+    &= -(\frac{4}{9}\log \frac{4}{9} + \frac{5}{9}\log \frac{5}{9}) \\
+    &= 0.991076 \tag{0}
+\end{aligned}
+$$
+$$
+\begin{aligned}
+    Gain(GPA) &= Entropy(S) - [\frac{215}{450}Entropy(low) + \frac{235}{450}Entropy(high)] \\
+    &= 0.4266983519911507 \tag{1}
+\end{aligned}
+$$
+$$
+\begin{aligned}
+    Gain(gender) &= Entropy(S) - [\frac{205}{450}Entropy(F) + \frac{245}{450}Entropy(M)] \\
+    &= 0.011233324824869495 \tag{2}
+\end{aligned}
+$$
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; According to the results, we can see that feature GPA's Gain is higher than gender, so the root of decision tree we will use the GPA, the second layer is gender, so the decision tree is drawn below:
+
+---
+
+#### 4. K-Means Clustering
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;First we need to implement the kmeans algorithm here. First random select k points to be centers from the dataset. Then to label every point in the dataset by selecting the smallest distance from the nearest center. Then iteratively update the centers until have no changes any more. The implementing code is below, also can see in `kmeans.m`:
+```matlab
+function [idx, ctrs, iter_ctrs] = kmeans(X, K)
+
+% YOUR CODE HERE
+vector = randperm(size(X, 1), K);
+ctrs = ones(K, size(X, 2));
+for i=1:K
+    ctrs(i, :) = X(vector(i), :);
+end
+iter_ctrs = ctrs;
+idx = zeros(size(X, 1), 1);
+
+while(true)
+    dist_matrix = EuDist2(X, ctrs);
+    [Y, idx_k] = min(dist_matrix, [], 2);
+    current_idx = idx_k;
+    if current_idx == idx
+        break;
+    end
+    idx = current_idx;
+
+    for i=1:K
+        ctrs(i, :) = mean(X(idx == i, :), 1);
+    end
+    iter_ctrs = cat(3, iter_ctrs, ctrs);
+end
+end
+```
+<br>
+
+**(a)**
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I run the kmeans algorithm 1000 times, I plot the figure with largest SD and smallest SD, the process code is in `show_kmeans_SD.m`, the result plots is below:
+
+- largest SD:
+![](../answer_images/hw3_4_1_max.png)
+
+- smallest SD:
+![](../answer_images/hw3_4_1_min.png)
+
+<br>
+
+**(b)**
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;We can run kmeans algorithm for many times and then select the best result or the most occurance result from all the result data, the result may be more stable than just one time kmeans algorithm run.
+
+<br>
+
+**(c)**
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;After running the process code, I get the result plots below, you can also find it in `show_kmenas_digits.m`:
+- k = 10:
+![](../answer_images/hw3_4_3_k_10.png)
+
+- k = 20:
+![](../answer_images/hw3_4_3_k_20.png)
+
+- k = 50:
+![](../answer_images/hw3_4_3_k_50.png)
+
+<br>
+
+**(d)**
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I implement the `vq.m` and you can find the result images in `Result_images` folder which contains the result plot for `k = 8, 16, 32, 64` compressing results. The compressed results are below:
+
+- k = 8:
+![](../answer_images/hw3_4_4_k_8.png)
+- k = 16:
+![](../answer_images/hw3_4_4_k_16.png)
+- k = 32:
+![](../answer_images/hw3_4_4_k_32.png)
+- k = 64:
+![](../answer_images/hw3_4_4_k_64.png)
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;As for the compressing ratio:
+$$
+ratio = \frac{\log K}{3 * 8} = \frac{\log K}{24} = \frac{\log64}{24} = \frac{6}{24} = 0.25
+$$
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;So the compressing ratio when `K = 64` is 25%.
