finish hw3, initial hw4

--- a/assignment/hw3/3160104367_hw3.md
+++ b/assignment/hw3/3160104367_hw3.md
@@ -148,7 +148,7 @@ end
 <br>
 
 **(b)**
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; In my view, denote that `N` is total number of dataset, and `C` is the class number, the proper `K = N / C`, because can get proper information for one point's neighbors information.
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; In my view, we can split the training data into training data and test set, try many k values and use cross-validation method to calculate the accuracy which k is giving the best result. The k value should as big enough to avoid noisy, generally, we denote `N` as number of sample set, $\sqrt{N}$ will be a good choice, and then test the around many k values, select k value which performs the highest accuracy on testing-set.
 
 <br>
 
@@ -172,21 +172,38 @@ end
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; The main processing code is in `run.m`, you can run this program and see the knn's performance in testing set, I run it and get the results below, it can recognize all correctly!
 
 - (1)
-![](../answer_images/hw3_2_test_1.png)
+
+<div align="center">
+    <img src="../answer_images/hw3_2_test_1.png" weight="200" height="200">
+</div>
 
 - (2)
-![](../answer_images/hw3_2_test_2.png)
+
+<div align="center">
+    <img src="../answer_images/hw3_2_test_2.png" weight="200" height="200">
+</div>
 
 - (3)
-![](../answer_images/hw3_2_test_3.png)
+
+<div align="center">
+    <img src="../answer_images/hw3_2_test_3.png" weight="200" height="200">
+</div>
 
 - (4)
-![](../answer_images/hw3_2_test_4.png)
+
+<div align="center">
+    <img src="../answer_images/hw3_2_test_4.png" weight="200" height="200">
+</div>
 
 - (5)
-![](../answer_images/hw3_2_test_5.png)
+
+<div align="center">
+    <img src="../answer_images/hw3_2_test_5.png" weight="200" height="200">
+</div>
 
 ---
+
+<br>
 
 #### 3. Decision Tree and ID3
 
@@ -211,7 +228,11 @@ $$
 \end{aligned}
 $$
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; According to the results, we can see that feature GPA's Gain is higher than gender, so the root of decision tree we will use the GPA, the second layer is gender, so the decision tree is drawn below:
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; According to the results, we can see that feature GPA's Gain is higher than gender, that is $Gain(GPA) > Gain(gender)$, so the root of decision tree we will use the GPA, the second layer is gender, so the decision tree is drawn below:
+
+<div align="center">
+    <img src="../answer_images/hw3_3.jpg">
+</div>
 
 ---
 
@@ -251,20 +272,27 @@ end
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I run the kmeans algorithm 1000 times, I plot the figure with largest SD and smallest SD, the process code is in `show_kmeans_SD.m`, the result plots is below:
 
 - largest SD:
-![](../answer_images/hw3_4_1_max.png)
+
+<div align="center">
+    <img src="../answer_images/hw3_4_1_max.png" weight="350" height="350">
+</div>
 
 - smallest SD:
-![](../answer_images/hw3_4_1_min.png)
+
+<div align="center">
+    <img src="../answer_images/hw3_4_1_min.png" weight="400" height="400">
+</div>
 
 <br>
 
 **(b)**
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;We can run kmeans algorithm for many times and then select the best result or the most occurance result from all the result data, the result may be more stable than just one time kmeans algorithm run.
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;We can run kmeans algorithm for many times and then select the best result from all the result data, the result may be more stable than just one time kmeans algorithm run.
 
 <br>
 
 **(c)**
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;After running the process code, I get the result plots below, you can also find it in `show_kmenas_digits.m`:
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;After running the process code, I get the result plots below, and you can see that kmeans algorithm can discover the pattern without any label information, you can also find it in `show_kmenas_digits.m`:
+
 - k = 10:
 ![](../answer_images/hw3_4_3_k_10.png)
 
@@ -280,16 +308,34 @@ end
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I implement the `vq.m` and you can find the result images in `Result_images` folder which contains the result plot for `k = 8, 16, 32, 64` compressing results. The compressed results are below:
 
 - k = 8:
-![](../answer_images/hw3_4_4_k_8.png)
+
+<div align="center">
+<img src="../answer_images/hw3_4_4_k_8.png" weight="450px" height="450px">
+</div>
+
 - k = 16:
-![](../answer_images/hw3_4_4_k_16.png)
+
+<div align="center">
+<img src="../answer_images/hw3_4_4_k_16.png" weight="500px" height="500px">
+</div>
+
 - k = 32:
-![](../answer_images/hw3_4_4_k_32.png)
+
+<div align="center">
+<img src="../answer_images/hw3_4_4_k_32.png" weight="450px" height="450px">
+</div>
+
 - k = 64:
-![](../answer_images/hw3_4_4_k_64.png)
+
+<div align="center">
+<img src="../answer_images/hw3_4_4_k_64.png" weight="450px" height="450px">
+</div>
+
+<br>
+<br>
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;As for the compressing ratio:
 $$
-ratio = \frac{\log K}{3 * 8} = \frac{\log K}{24} = \frac{\log64}{24} = \frac{6}{24} = 0.25
+ratio = \frac{3 * 8}{\log K} = \frac{24}{\log K} = \frac{24}{\log64} = \frac{24}{6} = 4
 $$
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;So the compressing ratio when `K = 64` is 25%.
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;So the compressing ratio when `K = 64` is `4:1.`
